# forge_builder

./: .gitignore  AGENTS.md  README.md  anvil-styleguide.html  package.json  pnpm-lock.yaml  teardown.md  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
anvil_diagnosis/: forge-css-dump.json  sheet-states.json
coordination/: CONTRACTS.md  REQUESTS.md  STATUS.md
docs/: BLOCKS-POLISH-PLAN.md  CODEX-RULES.md  DESIGN-SYSTEM-PLAN.md  MOTION-PLAN.md  PLAYER-UX-PLAN.md  POLISH-PLAN.md  PROMPTS.md  RECOVERY-PLAN.md  RISE-PARITY-PLAN.md  ROADMAP.md  RUNBOOK.md  SPEC.md  block-functionality-audit.md  visual-parity-checklist.md
docs/adr/: 0000-index.md  0001-gateway-sse-websocket.md  0002-stack-convergence.md  0003-schema-canonicalization.md  0004-teardown-schema-additions.md  0005-codex-handoff-doc-restructure.md
docs/design-system/: README.md  decisions.md  tokens.md
docs/reference/: NOTES.md  course.json  static-sites.md  tc-config.js  tincan.xml
docs/reference/legacy-editor/: App.tsx.txt  courseModel.test.ts.txt  courseModel.ts.txt  styles.css.txt  (+2 more)
e2e/exporter/: build-run.mjs
e2e/player/: gating-run.mjs
e2e/smoke/: fonts-smoke.mjs  render-smoke.mjs  richtext-smoke.mjs
e2e/xapi/: golden-run.mjs  golden-statements.json
example/: index.html  tincan.xml
example/content/: course-data.json
scripts/: contract-check.mjs  make-standalone.mjs  make-styleguide.mjs
services/api/: README.md  pyproject.toml
services/api/src/forge_api/: __init__.py  auth.py  errors.py  main.py  repository.py  schemas.py  uploads.py
services/api/tests/: test_app.py
(+1 files in other folders)
